@@ -1,5 +1,13 @@
 2018-03-19  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/84859
+	* tree-ssa-phiopt.c (single_trailing_store_in_bb): New function.
+	(cond_if_else_store_replacement): Perform sinking operation on
+	single-store BBs regardless of MAX_STORES_TO_SINK setting.
+	Generalize what a BB with a single eligible store is.
+
+2018-03-19  Richard Biener  <rguenther@suse.de>
+
 	PR tree-optimization/84929
 	* tree-data-ref.c (analyze_siv_subscript_cst_affine): Guard
 	chrec_is_positive against non-chrec arg.
